--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.room:room-runtime:2.2.5'
+    implementation "androidx.cardview:cardview:1.0.0"
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
 }
